--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-3b3daf557-20211210",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.36.3"
+    "msw": "^0.36.3",
+    "prettier": "2.5.1"
   }
 }
